--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0; 
+}
+
 html,
 body {
   padding: 0;
@@ -14,12 +19,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.inputRounded .MuiOutlinedInput-root {
+  border-radius: 8px;
 }
