--- a/styles/forgotpassword.module.css
+++ b/styles/forgotpassword.module.css
@@ -1,11 +1,27 @@
-.aside__image{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+/* PAGE LAYOUT*/
+
+.forgot-password-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 20px;
+  width: 100vw;
+  height: auto;
+  border: 2px red solid;
 }
 
-.aside{
-    display: flex;
-    width: 50vw;
-    height: 100vh;
+.forgot-password-aside {
+  display: none;
+}
+
+.forgot-password-main {
+  width: 80%;
+  padding: 35px 0;
+}
+
+.forgot-password__go-back {
+  display: block;
+  margin: 12px auto;
+    text-align: center;
 }
