--- a/src/components/StyledText/styles.module.css
+++ b/src/components/StyledText/styles.module.css
@@ -1,13 +1,13 @@
-.text{
-    font-family: "Work Sans", sans-serif;
-    font-size: 12px;
-    color: #5C5C5C;
-    text-align: start;
-    font-weight: light;
+.text {
+  font-family: "Work Sans", sans-serif;
+  font-size: 12px;
+  color: #5c5c5c;
+  text-align: start;
+  font-weight: light;
 }
 
 @media (min-width: 360px) {
-    .text{
-        font-size: 15px;
-    }
+  .text {
+    font-size: 15px;
+  }
 }
