--- a/styles/forgotpassword.module.css
+++ b/styles/forgotpassword.module.css
@@ -8,20 +8,53 @@
   padding: 0 20px;
   width: 100vw;
   height: auto;
-  border: 2px red solid;
 }
 
 .forgot-password-aside {
   display: none;
+  grid-area: forgot-password-aside;
+}
+
+.forgot-password-header {
+  grid-area: forgot-password-header;
 }
 
 .forgot-password-main {
-  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
   padding: 35px 0;
+  grid-area: forgot-password-main;
 }
+
+/*Media query*/
+@media (min-width: 360px) {
+  .forgot-password-page {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: 60px calc(100vh - 60px);
+    grid-template-areas:
+      "forgot-password-header forgot-password-aside"
+      "forgot-password-main forgot-password-aside";
+  }
+
+  .forgot-password-aside {
+    display: block;
+  }
+}
+
+/* OTHER STYLES */
 
 .forgot-password__go-back {
   display: block;
-  margin: 12px auto;
-    text-align: center;
+  margin-top: 12px;
+  text-align: center;
+}
+
+.forgot-password-aside__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
