desktop styles ok

--- a/styles/forgotpassword.module.css
+++ b/styles/forgotpassword.module.css
@@ -5,7 +5,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 0 20px;
   width: 100vw;
   height: auto;
 }
@@ -13,6 +12,7 @@
 .forgot-password-aside {
   display: none;
   grid-area: forgot-password-aside;
+  width: 50vw;
 }
 
 .forgot-password-header {
@@ -23,17 +23,18 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  padding: 35px 0;
+  align-items: flex-start;
+  padding: 35px calc((50vw - 436px)/2);
   grid-area: forgot-password-main;
+  width: 50vw;
+  height: 40%;
 }
 
 /*Media query*/
 @media (min-width: 360px) {
   .forgot-password-page {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 60px calc(100vh - 60px);
     grid-template-areas:
       "forgot-password-header forgot-password-aside"
@@ -51,6 +52,7 @@
   display: block;
   margin-top: 12px;
   text-align: center;
+  align-self: center;
 }
 
 .forgot-password-aside__image {
