--- a/src/components/Form/style.module.css
+++ b/src/components/Form/style.module.css
@@ -1,7 +1,8 @@
 .form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-block: 1.5rem;
   gap: 1.5rem;
-  max-width: 436px;
+  width: 100%;
 }
