--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   border-bottom: 1px solid #eaecf0;
   padding: 20px;
 }
