--- a/src/components/PrimaryInput/styles.module.css
+++ b/src/components/PrimaryInput/styles.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: .5rem;
+  width: 100%;
+  max-width: 436px;
 }
 
 .heading {
@@ -12,7 +14,6 @@
 
 .input {
   width: 100%;
-  max-width: 436px;
   border-radius: 5px;
   height: 32px;
   padding-block: 1rem;
