--- a/styles/forgotpassword.module.css
+++ b/styles/forgotpassword.module.css
@@ -12,7 +12,6 @@
 .forgot-password-aside {
   display: none;
   grid-area: forgot-password-aside;
-  width: 50vw;
 }
 
 .forgot-password-header {
@@ -31,18 +30,32 @@
 }
 
 /*Media query*/
-@media (min-width: 360px) {
+@media (min-width: 600px) {
   .forgot-password-page {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     grid-template-rows: 60px calc(100vh - 60px);
     grid-template-areas:
       "forgot-password-header forgot-password-aside"
       "forgot-password-main forgot-password-aside";
   }
 
+  .forgot-password-main{
+    margin: 35px 20px;
+  }
+
   .forgot-password-aside {
     display: block;
+    height: 100vh;
+    width: auto;
+
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .forgot-password-aside {
+    width: 50vw;
   }
 }
 
