--- a/styles/ResetPassword.module.css
+++ b/styles/ResetPassword.module.css
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   align-items: center;
   width: 100vw;
-  height: auto;
+  height: 100vh;
 }
 
 .reset-password-aside {
