--- a/src/components/SignUpOverlay/styles.module.css
+++ b/src/components/SignUpOverlay/styles.module.css
@@ -10,28 +10,29 @@
 .imageContainer {
   position: absolute;
   width: 100%;
+  height: 80vh;
   top: 0px;
   left: 0;
   z-index: 1;
-}
-
-.background {
-  position: absolute;
+  background-image: url('../../../public/sign-up-shoes.png');
+  background-size: container;
+  background-repeat: no-repeat;
   background-color: #e9eef4;
-  height: 83px;
-  width: 100%;
-  bottom: 125px;
-  left: 0;
-  z-index: 0;
-  border-radius: 15px;
+  border-radius: 0 0 20px 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding-inline: 2rem;
+  padding-block: 1rem;
+  gap: .75rem;
 }
 
 .heading {
-  position: absolute;
-  z-index: 2;
-  bottom: -30px;
+  line-height: 1.2;
   width: 9ch;
   left: 1.5rem;
+  font-weight: 600;
 }
 
 .buttons {
@@ -40,7 +41,12 @@
   padding-inline: 1rem;  
   display: flex;
   gap: 1rem;
-  /* align-items: center; */
   bottom: 50px;
+}
+
+@media (min-width: 361px) {
+  .overlay {
+    display: none;
+  }
 }
 
