--- a/src/components/SignUpOverlay/styles.module.css
+++ b/src/components/SignUpOverlay/styles.module.css
@@ -14,7 +14,7 @@
   top: 0px;
   left: 0;
   z-index: 1;
-  background-image: url('../../../public/sign-up-shoes.png');
+  background-image: url('/sign-up-shoes.png');
   background-size: container;
   background-repeat: no-repeat;
   background-color: #e9eef4;
@@ -22,7 +22,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   padding-inline: 2rem;
   padding-block: 1rem;
   gap: .75rem;
