--- a/src/components/Form/style.module.css
+++ b/src/components/Form/style.module.css
@@ -1,8 +1,8 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-block: 1.5rem;
+  padding-block: 2.5rem;
   gap: 1.5rem;
   width: 100%;
+  max-width: 436px;
 }
