--- a/styles/updateProfile.module.css
+++ b/styles/updateProfile.module.css
@@ -1,3 +1,12 @@
+.heading{
+    color: #000000;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 35px;
+}
+
 .container{
     max-width: 324px;
     width: 100%;
