--- a/styles/updateProfile.module.css
+++ b/styles/updateProfile.module.css
@@ -1,3 +1,17 @@
+/* STYLES FOR MOBILE */
+
+.container_settings{
+    display: none;
+}
+
+.container_profile{
+    max-width: 324px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+}
+
 .heading{
     color: #000000;
     font-family: 'Work Sans';
@@ -5,18 +19,6 @@
     font-weight: 500;
     font-size: 30px;
     line-height: 35px;
-}
-
-.container_settings{
-    display: none;
-}
-
-.container{
-    max-width: 324px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
 }
 
 .button_outlined{
@@ -38,6 +40,15 @@
     height: 30px;
 }
 
+.welcomeBack_text{
+    width: 314px;
+    height: 28px; 
+    color: #5C5C5C;
+    font-size: 12px;
+    font-weight: 300;
+    margin-top: 16px;
+    margin-left: 4px;
+}
 .form {
     display: flex;
     flex-direction: column;
@@ -48,14 +59,32 @@
     margin-top: 20px;
   }
 
+  /* STYLES FOR TABLET & DESKTOP */
+
   @media (min-width: 600px){
     .container_settings{
         display: block;
-        position: absolute;
-        max-height: 459px;
-        height: 100%;
+        height: auto;
     }
 
+    .container_profile{
+        margin-left: 80px;
+    }
+
+    .heading{
+        color: #000000;
+        font-family: 'Work Sans';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 45px;
+        line-height: 53px;
+    }
+    
+    .welcomeBack_text{
+        width: 459px;
+        height: 18px;
+        font-size: 15px;
+    }
     .vector{
         position: absolute;
         margin-left: 46px;
@@ -138,13 +167,11 @@
         font-weight: 500;
         font-size: 16px;
         line-height: 19px;
-
     }
 
     .myWallet_text:hover{
         color: #FE645E;
         cursor: pointer;
-
     }
 }
 
