--- a/styles/updateProfile.module.css
+++ b/styles/updateProfile.module.css
@@ -9,7 +9,6 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
 }
 
 .heading{
@@ -65,6 +64,8 @@
     .container_settings{
         display: block;
         height: auto;
+        max-width: 320px;
+        width: 100%;
     }
 
     .container_profile{
@@ -93,7 +94,7 @@
     }
 
     .vector:hover{
-        transform: rotate(270deg);
+        transform: rotate(-90deg);
         cursor: pointer;
     }
 
