--- a/src/components/HeaderLogedIn/styles.module.css
+++ b/src/components/HeaderLogedIn/styles.module.css
@@ -1,5 +1,5 @@
 .logo{
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 .separationLine{
@@ -8,4 +8,33 @@
     border: 1px solid #EAECF0;
     margin-bottom: 93px;
 }
+
+.searchInput{
+    border: 1px solid #494949;
+    border-radius: 42px;
+    width: 320px;
+    height: 48px;
+}
+
+.searchBox{
+    display: flex;
+    max-width: 350px;
+    width: 100%;    
+    align-items: center;
+    gap: 20px;
+    margin-top: 40px;
+    margin-left: 30px;
+}
+
+.searchInput::placeholder{
+  padding-left: 40px;
+}
+
+.box{
+    max-width: 1920px;
+    width: 100%;
+    display: flex;
+}
+
+
 
