--- a/src/components/HeaderLogedIn/styles.module.css
+++ b/src/components/HeaderLogedIn/styles.module.css
@@ -1,5 +1,5 @@
 .logo{
-    margin-top: 50px;
+    margin-left: 20px;
 }
 
 .separationLine{
@@ -9,34 +9,39 @@
     margin-bottom: 93px;
 }
 
-.searchInput{
-    border: 1px solid #494949;
-    border-radius: 42px;
-    width: 320px;
-    height: 48px;
-}
-
-.searchInput[type="text"]{
-    padding-left: 40px;
-    font-size: 1.25rem;
-    color: #494949;
-}
-
-.searchBox{
-    display: flex;
-    max-width: 350px;
-    width: 100%;    
-    align-items: center;
-    gap: 20px;
-    margin-top: 40px;
-    margin-left: 30px;
-}
-
-
-.box{
-    max-width: 1920px;
-    width: 100%;
-    display: flex;
+@media (min-width: 600px){
+    .logo{
+        margin-top: 50px;
+    }
+    .searchInput{
+        border: 1px solid #494949;
+        border-radius: 42px;
+        width: 320px;
+        height: 48px;
+    }
+    
+    .searchInput[type="text"]{
+        padding-left: 40px;
+        font-size: 1.25rem;
+        color: #494949;
+    }
+    
+    .searchBox{
+        display: flex;
+        max-width: 350px;
+        width: 100%;    
+        align-items: center;
+        gap: 20px;
+        margin-top: 40px;
+        margin-left: 30px;
+    }
+    
+    
+    .box{
+        max-width: 1920px;
+        width: 100%;
+        display: flex;
+    }
 }
 
 
