--- a/src/components/HeaderLogedIn/styles.module.css
+++ b/src/components/HeaderLogedIn/styles.module.css
@@ -2,6 +2,18 @@
     margin-left: 20px;
 }
 
+.searchInput{
+    border: 1px solid #494949;
+    border-radius: 42px;
+    width: 120px;
+    height: 30px;
+}
+
+.searchInput[type="text"]{
+    padding-left: 20px;
+    font-size: 1rem;
+    color: #494949;
+}
 .separationLine{
     color: #EAECF0;
     margin-top: 41px;
@@ -35,8 +47,7 @@
         margin-top: 40px;
         margin-left: 30px;
     }
-    
-    
+        
     .box{
         max-width: 1920px;
         width: 100%;
