--- a/src/components/SideBarItem/styles.module.css
+++ b/src/components/SideBarItem/styles.module.css
@@ -28,4 +28,7 @@
     height: 20px;
     margin-left: 9px;
     text-align: center;
+    padding: 2px;
+    display: flex;
+    align-items: center;
 }
