--- a/src/components/ErrorPage/styles.module.css
+++ b/src/components/ErrorPage/styles.module.css
@@ -37,6 +37,7 @@
     font-family: Work Sans, sans-serif;
     line-height: 18px;
     border: none;
+    cursor: pointer;
   }
   .error__btn__colored{
     background-color: #FE645E;
@@ -55,4 +56,75 @@
     height: 690px;
     width: 100%;
   }
-  
+  @media (max-width: 600px){
+    .error{
+     max-width: 600px;
+     height: 90vh;
+     flex-direction: column;
+     background-color: #e5e6e7;
+  }
+  .error__description__title {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .error__description__message {
+    text-align: center;
+    width: 100%;
+  }
+  .error__description__wrapper{
+    width: 100%;
+    margin: 0 0;
+  }
+  .error__img {
+    width: 100%;
+    height: 300px;
+  }
+  .error__btns {
+    position: absolute;
+    bottom: -200px;
+    
+  }
+  }
+  @media (max-width: 360px) {
+    .error {
+      max-width: 360px;
+      height: 100vh;
+      flex-direction: column;
+      background-color: #e5e6e7;
+    }
+    .error__description__title {
+      font-size: 30px;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    .error__description__message {
+      text-align: center;
+      font-size: 12px;
+      line-height: 17px;
+      margin: 0 30px;
+    }
+    .error__description {
+      width: 100%;
+    }
+    .error__description__wrapper {
+      width: 100%;
+    }
+    .error__img {
+      width: 100%;
+      height: 350px;
+    }
+    .error_img {
+      border-bottom-left-radius: 40px;
+      border-bottom-right-radius: 40px;
+    }
+    .error__btns {
+      position: absolute;
+      width: 100%;
+      margin: 0 auto;
+      bottom: -370px;
+      text-align: center;
+    }
+    .error__btn{
+        margin:30px 2px 30px 0;
+    }
+  }
