--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,12 +1,13 @@
 .panel-container {
-  width: 100%;
   height: 132px;
-  background-image: url(../public/bgHomeImg.png);
-  background-size: 100% auto;
+  background-image: url(../public/bgHomeImgMobile.png);
+  background-size: cover;
+  margin: -20px;
 }
 
-.main {
+.home-page-container__main {
   margin: 20px;
+  width: 100%;
 }
 
 .cards {
@@ -17,3 +18,44 @@
   gap: 20px;
 }
 
+.titles-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.titles-container__button {
+  width: 150px;
+  height: 40px;
+  display: none !important;
+}
+
+.home-page-container__side-bar {
+  display: none;
+}
+
+
+@media (min-width: 600px) {
+ .titles-container__button{
+  display: flex !important;
+ }
+ .panel-container{
+  background-image: url(../public/bgHomeImgDesktop.png);
+  height: 260px;
+ }
+ .home-page-container {
+  display: flex;
+  flex-direction: row;
+ }
+
+ .home-page-container__side-bar{
+  width: 360px;
+  padding: 5px
+ }
+
+ .home-page-container__side-bar{
+  display: inline-flex;
+ }
+
+}
