sign up functionality

--- a/styles/SignUp.module.css
+++ b/styles/SignUp.module.css
@@ -22,10 +22,12 @@
 
 .text {
   font-size: 10px;
+  margin-inline: auto;
 }
 
 .span {
   color: var(--primary);
+  font-weight: 500;
   margin-left: .25rem;
 }
 
