fix margin of panel in desktop design

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,6 +43,7 @@
  .panel-container{
   background-image: url(../public/bgHomeImgDesktop.png);
   height: 260px;
+  margin: 0px;
  }
  .home-page-container {
   display: flex;
