--- a/styles/error500.module.css
+++ b/styles/error500.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 120px 0 60px;
+  padding: 120px 15px 60px;
 }
 
 .error-500__text {
