--- a/styles/SignIn.module.css
+++ b/styles/SignIn.module.css
@@ -6,11 +6,18 @@
 }
 
 .leftContainer {
-  padding-inline: 1.25rem;
-  padding-block: 2rem;
+
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.formWrapper {
   display: grid;
   place-content: center;
-  flex: 1
+  flex: 1;
+  padding-inline: 1.25rem;
+  padding-block: 2rem;
 }
 
 .checkbox {
@@ -45,6 +52,7 @@
 .flex {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .forgotPassword {
@@ -54,7 +62,7 @@
 
 @media (min-width: 600px) {
   .checkbox {
-    font-size: 16px;
+    font-size: 15px;
   }
   
   .text {
