--- a/styles/SignUp.module.css
+++ b/styles/SignUp.module.css
@@ -6,11 +6,17 @@
 }
 
 .leftContainer {
-  padding-inline: 1.25rem;
-  padding-block: 2rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.formWrapper {
   display: grid;
   place-content: center;
-  flex: 1
+  flex: 1;
+  padding-inline: 1.25rem;
+  padding-block: 2rem;
 }
 
 .checkbox {
@@ -85,7 +91,7 @@
 
 @media (min-width: 600px) {
   .checkbox {
-    font-size: 16px;
+    font-size: 15px;
   }
   
   .text {
