fix: general styles and add 'HeaderLoggedIn' component into 'update-profile' page

--- a/src/components/HeaderLoggedIn/styles.module.css
+++ b/src/components/HeaderLoggedIn/styles.module.css
@@ -18,7 +18,7 @@
     color: #EAECF0;
     margin-top: 41px;
     border: 1px solid #EAECF0;
-    margin-bottom: 93px;
+    /* margin-bottom: 93px; */
 }
 
 .cart{
