--- a/src/components/ErrorPage/styles.module.css
+++ b/src/components/ErrorPage/styles.module.css
@@ -1,36 +1,55 @@
 .error {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 81vh;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    position: relative;
   }
-  .error__description {
-    width: 50%;
-    font-family: Work Sans, "sans-serif";
-  }
+
   .error__description__wrapper{
-    width: 540px;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
   }
+
+  .error__text__box {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding-block: 2.5rem;
+    padding-inline: 1rem;
+    text-align: center;
+    align-items: center;
+    gap: .5rem;
+
+  }
+
   .error__description__title {
     font-weight: 500;
-    font-size: 45px;
+    font-size: 30px;
     color: #000;
   }
+
   .error__description__message {
     font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 12px;
     color: #5c5c5c;
+    max-width: 305px;
+    max-width: 538px;
+
   }
+
   .error__btns{
-    
-    width: 400px;
+    display: flex;
+    margin-top: auto;
+    margin-inline: auto;
+    gap: 1rem;
   }
+
   .error__btn{
     border-radius: 8px;
     height: 40px;
-    margin:30px 20px 0 0;
     width: 152px;
     font-size: 16px;
     font-weight: 500;
@@ -39,92 +58,96 @@
     border: none;
     cursor: pointer;
   }
+
   .error__btn__colored{
     background-color: #FE645E;
     color: #FFF;
+    display: grid;
+    place-content: center;
   }
+
   .error__btn__notColored{
     background-color: #FFF;
     color: #FE645E;
     border: 1px solid #FE645E;
+    display: grid;
+    place-content: center;
+  }
+
+  .error__img__overlay {
+    /* width: 50%; */
+    background-color: lightblue;
+    background-image: url('/error404.png');
+    background-position: bottom;
+    background-color: #e5e6e7;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 82vh;
+    width: 100%;
+    top: 0;
+    border-radius: 0 0 2rem 2rem;
+    z-index: -1;
+  }
+
+  .error__img {
+    display: none;
+    width: 50%;
+    background-image: url('/error404.png');
+    background-position: bottom;
+    background-color: #e5e6e7;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  @media (min-width: 700px) {
+    .error__description__title {
+      font-size: 45px;
+      text-align: left;
+    }
+
+    .error__description__message {
+      font-size: 20px;
+      text-align: left;
+    }
 
   }
-  .error__img {
-    width: 50%; 
-  }
-  .error_img{
-    height: 690px;
-    width: 100%;
-  }
-  @media (max-width: 600px){
-    .error{
-     max-width: 600px;
-     height: 90vh;
-     flex-direction: column;
-     background-color: #e5e6e7;
-  }
-  .error__description__title {
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  .error__description__message {
-    text-align: center;
-    width: 100%;
-  }
-  .error__description__wrapper{
-    width: 100%;
-    margin: 0 0;
-  }
-  .error__img {
-    width: 100%;
-    height: 300px;
-  }
-  .error__btns {
-    position: absolute;
-    bottom: -200px;
-    
-  }
-  }
-  @media (max-width: 360px) {
+
+
+  @media (min-width: 1000px) {
+
     .error {
-      max-width: 360px;
-      height: 100vh;
+      flex-direction: row;
+    }
+
+    .error__img__overlay {
+      display: none;
+      width: 50%;
+      border-radius: 0;
+      background-size: cover;
       flex-direction: column;
-      background-color: #e5e6e7;
     }
-    .error__description__title {
-      font-size: 30px;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    .error__description__message {
-      text-align: center;
-      font-size: 12px;
-      line-height: 17px;
-      margin: 0 30px;
-    }
-    .error__description {
-      width: 100%;
-    }
+
     .error__description__wrapper {
-      width: 100%;
+      width: 50%;
     }
-    .error__img {
-      width: 100%;
-      height: 350px;
+
+    .error__text__box {
+      justify-content: center;
+      align-items: flex-start;
+      gap: 1rem;
     }
-    .error_img {
-      border-bottom-left-radius: 40px;
-      border-bottom-right-radius: 40px;
-    }
+
+
     .error__btns {
-      position: absolute;
-      width: 100%;
-      margin: 0 auto;
-      bottom: -370px;
-      text-align: center;
+      margin-top: 0;
+      margin: 0;
     }
-    .error__btn{
-        margin:30px 2px 30px 0;
+
+    .error__img {
+      display: block;
+      background-position: center;
+      background-position: contain;
     }
+
   }
