--- a/styles/ResetPassword.module.css
+++ b/styles/ResetPassword.module.css
@@ -5,8 +5,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .reset-password-aside {
@@ -31,21 +31,22 @@
   .reset-password-page {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 60px calc(100vh - 60px);
+    grid-template-rows: 68px calc(100vh - 68px);
     grid-template-areas:
       "reset-password-header reset-password-aside"
       "reset-password-main reset-password-aside";
   }
 
   .reset-password-main{
-    margin: 35px 20px;
+    margin: 0 20px;
   }
 
   .reset-password-aside {
     display: block;
-    height: 100vh;
-    width: auto;
-
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
 }
 
