working on mobile and desktop

--- a/styles/forgotpassword.module.css
+++ b/styles/forgotpassword.module.css
@@ -1,17 +1,20 @@
-/* PAGE LAYOUT*/
+/* PAGE LAYOUT */
 
 .forgot-password-page {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100vw;
-  height: auto;
 }
 
-.forgot-password-aside {
+.rightContainer {
   display: none;
   grid-area: forgot-password-aside;
+}
+
+.leftContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .forgot-password-header {
@@ -19,43 +22,49 @@
 }
 
 .forgot-password-main {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: flex-start;
-  padding: 35px calc((50vw - 436px)/2);
-  grid-area: forgot-password-main;
-  width: 50vw;
-  height: 40%;
+  justify-content: center;
+  width: 100%;
+  margin-inline: auto;
+  max-width: 436px;
+  padding: 1.5rem;
 }
 
 /*Media query*/
+
 @media (min-width: 600px) {
-  .forgot-password-page {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 60px calc(100vh - 60px);
-    grid-template-areas:
-      "forgot-password-header forgot-password-aside"
-      "forgot-password-main forgot-password-aside";
+
+  .forgot-password-main {
+    padding: 1rem;
   }
 
-  .forgot-password-main{
-    margin: 35px 20px;
-  }
-
-  .forgot-password-aside {
-    display: block;
-    height: 100vh;
-    width: auto;
-
-  }
 }
 
 
+
 @media (min-width: 1200px) {
-  .forgot-password-aside {
-    width: 50vw;
+  .forgot-password-page {
+    flex-direction: row;
+  }
+
+  .leftContainer{
+    width: 50%;
+  }
+
+  .forgot-password-main {
+    align-items: start;
+  }
+
+  .rightContainer {
+    display: block;
+    width: 50%;
+    flex: 1;
+    width: 50%;
+    background-image: url('/shoes.png');
+    background-position: center;
+    background-size: cover;
   }
 }
 
@@ -68,8 +77,4 @@
   align-self: center;
 }
 
-.forgot-password-aside__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+
