--- a/src/components/HeaderLoggedIn/styles.module.css
+++ b/src/components/HeaderLoggedIn/styles.module.css
@@ -1,6 +1,6 @@
-.logo{
+/* .logo{
     margin-left: 20px;
-}
+} */
 
 .searchInput{
     border: 1px solid #494949;
@@ -18,22 +18,21 @@
     color: #EAECF0;
     margin-top: 41px;
     border: 1px solid #EAECF0;
-    /* margin-bottom: 93px; */
 }
 
 .cart{
     margin: 0;
-    color: red;
 }
 @media (min-width: 600px){
-    .logo{
+
+    /* .logo{
         margin-top: 50px;
-    }
+    } */
     .searchInput{
         border: 1px solid #494949;
         border-radius: 42px;
-        width: 320px;
-        height: 48px;
+        width: 100%;
+        height: 48px;   
     }
     
     .searchInput[type="text"]{
@@ -42,20 +41,32 @@
         color: #494949;
     }
     
+    
     .searchBox{
         display: flex;
-        max-width: 350px;
-        width: 100%;    
         align-items: center;
-        gap: 20px;
         margin-top: 40px;
-        margin-left: 30px;
+        margin-left: auto;
+        margin-right: 20px;
     }
         
-    .box{
-        max-width: 1920px;
+}
+
+@media (min-width: 601px) and (max-width: 767px) {
+
+    .searchInput{
         width: 100%;
-        display: flex;
+        height: 35px;
+    }
+
+    .searchInput[type="text"]{
+        padding-left: 20px;
+        font-size: 0.75rem;
+        color: #494949;
+    }
+
+    .searchIcon{
+        margin-left: 5px;
     }
 }
 
