--- a/styles/updateProfile.module.css
+++ b/styles/updateProfile.module.css
@@ -1,26 +1,26 @@
 /* STYLES FOR MOBILE */
 
-.container_settings{
+/* .container_settings{
     display: none;
-}
+} */
 
-.container_profile{
+/* .container_profile{
     max-width: 324px;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-}
+} */
 
-.heading{
+/* .heading{
     color: #000000;
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 500;
     font-size: 30px;
     line-height: 35px;
-}
+} */
 
-.button_outlined{
+/* .button_outlined{
     color: #FE645E;
     font-family: Work Sans;
     font-size: 11px;
@@ -28,18 +28,18 @@
     border-radius: 6px;
     height: 35px;
     margin-bottom: 16px;
-}
+} */
 
-.button_contained{
+/* .button_contained{
     color: #FFFFFF;
     font-family: Work Sans;
     font-size: 11px;
     width: 120px;
     border-radius: 6px;
     height: 30px;
-}
+} */
 
-.welcomeBack_text{
+/* .welcomeBack_text{
     width: 314px;
     height: 28px; 
     color: #5C5C5C;
@@ -47,26 +47,28 @@
     font-weight: 300;
     margin-top: 16px;
     margin-left: 4px;
-}
+} */
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-block: 1.5rem;
     gap: 1.5rem;
-    width: 100%;
+    max-width: 350px;
+    /* width: 100%; */
     margin-top: 20px;
+    
   }
 
   /* STYLES FOR TABLET & DESKTOP */
 
   @media (min-width: 600px){
-    .container_settings{
+    /* .container_settings{
         display: block;
         height: auto;
         max-width: 320px;
         width: 100%;
-    }
+    } */
 
     .container_profile{
         margin-left: 80px;
@@ -86,49 +88,49 @@
         height: 18px;
         font-size: 15px;
     }
-    .vector{
+    /* .vector{
         position: absolute;
         margin-left: 46px;
         margin-top: 2px;
         transition: all 0.5s ease;
-    }
+    } */
 
-    .vector:hover{
+    /* .vector:hover{
         transform: rotate(-90deg);
         cursor: pointer;
-    }
+    } */
 
-    .settings_text{
+    /* .settings_text{
         font-weight: 500;
         font-size: 20px;
         line-height: 23px;
         margin-left: 80px;
         cursor: pointer;
-    }
+    } */
 
-    .line{
+    /* .line{
         width: 320px;
         color: #EAECF0;
         border: 1px solid;
         margin-top: 40px;
-    }
+    } */
 
-    .myProfile{
+    /* .myProfile{
         display: flex;
         margin-top: 30px;
         margin-left: 46px;
-    }
+    } */
 
-    .myProfile_text{
+    /* .myProfile_text{
         margin-left: 15px;
         color: #000000;
         transition: all 0.5s ease;
         font-weight: 500;
         font-size: 16px;
         line-height: 19px;
-    }
+    } */
     
-    .myProfile_text:hover{
+    /* .myProfile_text:hover{
         color: #FE645E;
         cursor: pointer;
     }
@@ -173,6 +175,6 @@
     .myWallet_text:hover{
         color: #FE645E;
         cursor: pointer;
-    }
+    } */
 }
 
