bag screen mobile and desktop

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,4 +34,15 @@ a {
   box-sizing: border-box;
 }
 
+.MuiOutlinedInput-notchedOutline {
+  /* outline: none; */
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.MuiInputBase-input {
+  padding: 0;
+}
+
 
