--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,19 +30,12 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 .MuiOutlinedInput-notchedOutline {
-  /* outline: none; */
-  border: none;
-  padding: 0;
-  margin: 0;
+  /* border: none; */
+  /* padding: 2rem;
+  margin: 0; */
 }
 
 .MuiInputBase-input {
   padding: 0;
 }
-
-
